@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 
 dnl ------------------------------------------------------------
-dnl $Id: configure.in,v 1.74 2002/11/05 08:16:59 freddy77 Exp $
+dnl $Id: configure.in,v 1.75 2002/11/10 17:22:46 freddy77 Exp $
 dnl If you're trying to create a new configure test, try
 dnl
 dnl 	http://autogen.sourceforge.net/conftest.html
@@ -186,6 +186,7 @@ dnl ------------------------------------------------------------
 dnl Checks for library functions.
 dnl ------------------------------------------------------------
 AC_CHECK_FUNCS(vsnprintf gettimeofday gethostname sethostent_r gethostent_r)
+AC_CHECK_FUNCS(getuid getpwuid getpwuid_r)
 AC_REPLACE_FUNCS(asprintf vasprintf atoll strtok_r)
 
 dnl ------------------------------------------------------------
